fix horizontal scroll

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -29,3 +29,7 @@ img {
     max-height: 500px;
     object-fit: cover;
 }
+
+.container-flex {
+    overflow-x: hidden;
+}
